<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.parse.starter.Register">


    <TextView
        android:id="@+id/name"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/username" />
    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="name"

        android:layout_alignTop="@+id/name"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/pass"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:layout_below="@+id/name"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="password"
        android:password="true"
        android:layout_above="@+id/emailtext"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username" />
    <TextView
        android:id="@+id/emailtext"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:layout_below="@+id/pass"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:padding="5dp"
        android:layout_alignTop="@+id/emailtext"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:onClick="onClick"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/cancel"
        android:layout_toStartOf="@+id/cancel" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:onClick="onClick"
        android:layout_alignBaseline="@+id/submit"
        android:layout_alignBottom="@+id/submit"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
