<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#141617"
    android:padding="10dp"
    android:theme="@style/Base.Theme.AppCompat">



    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="name"
        android:backgroundTintMode="multiply"
        android:layout_margin="10dp"
        android:textColor="#4E4E50"
        android:textColorHint="#4E4E50"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/username"
        android:layout_toEndOf="@+id/username"
        android:backgroundTint="#6847ea" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="password"
        android:password="true"
        android:backgroundTintMode="multiply"
        android:layout_margin="10dp"
        android:textColor="#4E4E50"
        android:textColorHint="#4E4E50"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="2dp"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/password"
        android:backgroundTint="#6847ea" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/submit"
        android:text="@string/login"
        android:onClick="onClick"
        android:background="#4D5055"
        android:textColor="#96999A"
        android:layout_margin="10dp"
         />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/register"
        android:text="@string/register"
        android:onClick="onClick"
        android:background="#4D5055"
        android:textColor="#96999A"
        android:layout_margin="10dp"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:onClick="onClick"
        android:visibility="gone"
        android:layout_margin="10dp"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue_grey_900">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            android:onClick="onClick"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:onClick="onClick"
                 />

            <Button
                android:id="@+id/disconnect_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disconnect"
                android:onClick="onClick"
                 />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>